# MCC

./: .gitignore  CMakeLists.txt  CMakeLists_GCC.txt  make.sh  out.c  readme.md  testfile.m
include/: analyze.h  cgen.h  code.h  globals.h  symtab.h  util.h
lex/: mcc.l
src/: analyze.c  cgen.c  code.c  mcc.c  symtab.c  util.c
yacc/: drag_calctest  mcc.y
